[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/InfiniticaBG.png" type="Texture" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/font/ConcertOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/infinity.png" type="Texture" id=4]
[ext_resource path="res://assets/menuhov.png" type="Texture" id=5]
[ext_resource path="res://assets/menunorm.png" type="Texture" id=6]
[ext_resource path="res://assets/menupress.png" type="Texture" id=7]
[ext_resource path="res://assets/exitbuthov.png" type="Texture" id=8]
[ext_resource path="res://assets/exitbutpress.png" type="Texture" id=9]
[ext_resource path="res://assets/exitbutnorm.png" type="Texture" id=10]
[ext_resource path="res://assets/borderhov.png" type="Texture" id=11]
[ext_resource path="res://assets/bordernorm.png" type="Texture" id=12]
[ext_resource path="res://assets/borderpress.png" type="Texture" id=13]
[ext_resource path="res://assets/newbutpressed.png" type="Texture" id=14]
[ext_resource path="res://assets/newbuthov.png" type="Texture" id=15]
[ext_resource path="res://assets/newbutnorm.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 85
extra_spacing_char = 7
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 640.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 82.0
margin_top = 60.0
margin_right = 560.0
margin_bottom = 276.0
texture = ExtResource( 4 )
expand = true

[node name="Label2" type="Label" parent="."]
margin_left = 128.0
margin_top = 260.0
margin_right = 530.0
margin_bottom = 311.0
custom_colors/font_color = Color( 0.0745098, 0.27451, 0.6, 1 )
custom_fonts/font = SubResource( 1 )
text = "try to reach 0"

[node name="Label" type="Label" parent="."]
margin_left = 124.0
margin_top = 256.0
margin_right = 526.0
margin_bottom = 307.0
rect_pivot_offset = Vector2( 188, 44 )
custom_colors/font_color = Color( 1, 0.890196, 0.611765, 1 )
custom_fonts/font = SubResource( 1 )
text = "try to reach 0"

[node name="Label4" type="Label" parent="."]
margin_left = 96.0
margin_top = 116.0
margin_right = 555.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 188, 44 )
custom_colors/font_color = Color( 1, 0.890196, 0.611765, 1 )
custom_fonts/font = SubResource( 3 )
text = "INFINITICA"

[node name="Label5" type="Label" parent="."]
margin_left = 92.0
margin_top = 112.0
margin_right = 551.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 188, 44 )
custom_colors/font_color = Color( 0.137255, 0.32549, 0.627451, 1 )
custom_fonts/font = SubResource( 3 )
text = "INFINITICA"

[node name="ConnectButton" type="TextureButton" parent="."]
margin_left = 248.0
margin_top = 440.0
margin_right = 389.0
margin_bottom = 484.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
expand = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 184.0
margin_top = 408.0
margin_right = 460.0
margin_bottom = 432.0

[node name="Label3" type="Label" parent="."]
margin_left = 232.0
margin_top = 364.0
margin_right = 404.0
margin_bottom = 385.0
custom_colors/font_color = Color( 0.137255, 0.32549, 0.627451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Twitch channel"

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 52.0
margin_top = 544.0
margin_right = 148.0
margin_bottom = 584.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 524.0
margin_top = 524.0
margin_right = 588.0
margin_bottom = 588.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 11 )
expand = true

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 232.0
margin_top = 500.0
margin_right = 405.0
margin_bottom = 572.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
expand = true

[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="TextureButton" to="." method="_on_TextureButton_toggled"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
